syntax = "proto3";

option java_package = "com.springboot.docker.grpc";



// The greeter service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello ( HelloRequest) returns (  HelloReply) {}

}


// The request message containing the user's name.
message HelloRequest {
  string name = 1;

  message Common {
    string att1 = 1;
    string att2 = 2;
    repeated string snippets = 3;
  }
  repeated Common commons = 2;
  Common common = 3;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
